--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,11 +35,11 @@ jobs:
       - name: Install
         run: yarn
 
-      - name: Lint
-        run: yarn lint
+      # - name: Lint
+      #  run: yarn lint
 
       # - name: Test
       #   run: pnpm run test
 
-      # - name: Build
-      #   run: pnpm run build
+      - name: Build
+        run: pnpm run build
