--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,10 +30,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node_version }}
-          cache: yarn
+          cache: pnpm
 
       - name: Install
-        run: yarn
+        run: pnpm i
 
       # - name: Lint
       #  run: yarn lint
@@ -42,4 +42,7 @@ jobs:
       #   run: pnpm run test
 
       - name: Build
-        run: yarn build
+        run: pnpm build
+
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
