--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -58,11 +58,11 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: my-app-${{ runner.os }}.exe
-          path: ./release/**/*.exe
+          path: ./release/*/*.exe
 
       - name: Archive production artifacts (Linux)
         if: runner.os == 'Linux'
         uses: actions/upload-artifact@v3
         with:
           name: my-app-${{ runner.os }}.AppImage
-          path: ./release/**/*.AppImage
+          path: ./release/*/*.AppImage
